[package]
name = "bcs"
version = "0.1.4"
authors = ["Diem <opensource@diem.com>"]
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/diem/bcs"
homepage = "https://diem.com"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = "1.0.117"
thiserror = "1.0.37"

[dev-dependencies]
proptest = "0.10.1"
criterion = "0.7.0"
proptest-derive = "0.7.0"
serde = { version = "1.0.117", features = ["derive"] }

[[bench]]
name = "bcs_bench"
harness = false
